Remove mongo repository and update several methods for mongoDB operations
Remove redundant MongoRepository class as this was not being used. Implement a generic method in Database class to convert a database type to its corresponding MongoCollection instance. Update ReadManager to rebuild cache in a different way and introduce a mechanism to select a random url from the cache for the queue. Expand functionality in CrawlManager class to handle more queue-related operations and create a new mover class to handle the data movement between two different queue. Refactor Processor class to better handle duplicate checks and url processing. Update route handling in main server code.